fixup! fixup! fixup! Add page layout scaffolding

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
       html {
         box-sizing: border-box;
+        scroll-behavior: smooth;
       }
 
       *,
@@ -255,15 +256,21 @@
         <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
         <li>
-          <a href="https://www.linkedin.com/in/jen4web/" target="_blank">
+          <a href="https://www.linkedin.com/in/klianos/" target="_blank">
             <span class="fab fa-linkedin" aria-hidden="true"></span>
             <span class="sr-only">LinkedIn</span>
           </a>
         </li>
         <li>
-          <a href="https://www.github.com/jen4web" target="_blank">
+          <a href="https://github.com/k-lianos" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
             <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/const.lianos/" target="_blank">
+            <span class="fab fa-instagram" aria-hidden="true"></span>
+            <span class="sr-only">Instagram</span>
           </a>
         </li>
       </ul>
@@ -394,15 +401,21 @@
       <h2>Konstantinos Lianos &middot; Software Architect</h2>
       <ul>
         <li>
-          <a href="https://www.linkedin.com/in/jen4web" target="_blank">
+          <a href="https://www.linkedin.com/in/klianos/" target="_blank">
             <span class="fab fa-linkedin" aria-hidden="true"></span>
             <span class="sr-only">LinkedIn</span>
           </a>
         </li>
         <li>
-          <a href="https://www.github.com/jen4web" target="_blank">
+          <a href="https://github.com/k-lianos" target="_blank">
             <span class="fab fa-github-square" aria-hidden="true"></span>
             <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/const.lianos/" target="_blank">
+            <span class="fab fa-instagram" aria-hidden="true"></span>
+            <span class="sr-only">Instagram</span>
           </a>
         </li>
       </ul>
